completed auto process